--- a/8-bit-map/package.json
+++ b/8-bit-map/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "leaflet": "^1.9.4",
+    "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
