--- a/8-bit-map/package.json
+++ b/8-bit-map/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "axios": "^1.6.7",
     "leaflet": "^1.9.4",
     "next": "14.1.1",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1"
